<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="giavu.co.jp.taxifare.about.AboutAppDialogViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:gravity="center"
            android:text="@{viewModel.titleMessage}"
            android:textAppearance="@style/Title"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/label_title" />

        <ImageView
            android:id="@+id/taxi_image"
            android:layout_width="@dimen/dimen_56dp"
            android:layout_height="@dimen/dimen_56dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:src="@drawable/ic_smile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/content_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:padding="@dimen/dimen_10dp"
            android:text="@{viewModel.contentMessage}"
            android:textAppearance="@style/Body"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintTop_toBottomOf="@id/taxi_image"
            tools:text="@string/label_thank" />

        <TextView
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:background="@drawable/background_bottom_round_black"
            android:paddingLeft="@dimen/dimen_28dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingRight="@dimen/dimen_28dp"
            android:paddingBottom="@dimen/dimen_10dp"
            android:text="@string/label_close"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_message"
            app:onClick="@{() -> viewModel.close()}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_28dp"
            app:layout_constraintTop_toBottomOf="@id/confirm_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>